# daily-retro-game

./: .gitignore  Cargo.toml  Containerfile  README.md  build.sh  config.toml  config_gen.sh  create_container.sh  feed.sh
src/: cli.rs  config.rs  daemon.rs  game.rs  main.rs  rawg.rs  smtp.rs  tui.rs
