[package]
name = "drg"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
cron = "0.15.0"
dialoguer = "0.12.0"
json = "0.12.4"
lettre = "0.11.19"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
